# 2020SP-ZJU-IR

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
src/build_index/: CMakeLists.txt  doc_info.hpp  kgram.hpp  lead_follow.hpp  main.cpp  raw.hpp  raw_inv_index.hpp
src/common/: CMakeLists.txt  common.hpp  common_serialization.hpp  concepts.hpp  cos_dist.hpp  debug.hpp  dictionary.hpp  doc_info.hpp  doc_inv_index.hpp  dummy.cpp  find_in_dict.hpp  index.hpp  kgram.hpp  kgram_inv_index.hpp  lead_follow_inv_index.hpp  preprocess.hpp  serialization.hpp  string_serialization.hpp  vb_io.hpp  vec.hpp  vec_of_tokens.hpp  wildcard_match.hpp
src/ir/: CMakeLists.txt  boolea.hpp  index_op.hpp  main.cpp  phrase.hpp  spelling_correction.hpp  synonym.hpp  topk.hpp  wildcard.hpp
