add_library(common
                index.hpp
                concepts.hpp
                common.hpp
                dictionary.hpp
                doc_inv_index.hpp
                kgram_inv_index.hpp
                preprocess.hpp
                doc_info.hpp
                vec.hpp
                lead_follow_inv_index.hpp
                dummy.cpp)